# formatpp

./: CMakeLists.txt  LICENSE  README.md
include/formatpp/: format.h
test/: CMakeLists.txt  test.cpp  test_main.cpp
